@@ -2,7 +2,7 @@ package Locale::Maketext::Guts;
 
 use Locale::Maketext;
 
-our $VERSION = '1.17';
+our $VERSION = '1.18_01';
 
 =head1 NAME
 
